Removendo classes utilitárias e usando tailwindcss

--- a/sysconfig/ui/public/index.html
+++ b/sysconfig/ui/public/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-<div id="app" class="u-total-center page" style="height: 100%"></div>
+<div id="app"></div>
 
 </body>
 </html>
